infer/tests/codetoanalyze/objc/errors/frontend/NSAssert_example.m
../../frontend/assertions/NSAssert_example.m